@@ -27,16 +27,6 @@
  */
 package org.silverpeas.core.notification.user.delayed.delegate;
 
-import org.silverpeas.core.notification.user.delayed.DelayedNotificationProvider;
-import org.silverpeas.core.notification.user.delayed.model.DelayedNotificationData;
-import org.silverpeas.core.notification.user.model.NotificationResourceData;
-import org.silverpeas.core.notification.user.client.NotificationParameters;
-import org.silverpeas.core.notification.user.client.constant.NotifAction;
-import org.silverpeas.core.notification.user.client.constant.NotifChannel;
-import org.silverpeas.core.notification.user.server.NotificationData;
-import org.silverpeas.core.notification.user.server.NotificationServerException;
-import org.silverpeas.core.admin.user.model.UserDetail;
-import org.apache.commons.io.Charsets;
 import org.apache.commons.io.IOUtils;
 import org.jboss.arquillian.container.test.api.Deployment;
 import org.jboss.arquillian.junit.Arquillian;
@@ -44,21 +34,24 @@ import org.jboss.shrinkwrap.api.Archive;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.silverpeas.core.admin.user.model.UserDetail;
+import org.silverpeas.core.notification.user.client.NotificationParameters;
+import org.silverpeas.core.notification.user.client.constant.NotifAction;
+import org.silverpeas.core.notification.user.client.constant.NotifChannel;
+import org.silverpeas.core.notification.user.delayed.DelayedNotificationProvider;
+import org.silverpeas.core.notification.user.delayed.model.DelayedNotificationData;
+import org.silverpeas.core.notification.user.model.NotificationResourceData;
+import org.silverpeas.core.notification.user.server.NotificationData;
 import org.silverpeas.core.test.WarBuilder4LibCore;
 import org.silverpeas.core.test.integration.rule.DbSetupRule;
+import org.silverpeas.core.util.Charsets;
 
 import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Date;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.notNullValue;
 
 @RunWith(Arquillian.class)
 public class DelayedNotificationDelegateIT {
@@ -91,116 +84,117 @@ public class DelayedNotificationDelegateIT {
   }
 
   @Test
-  public void testNewNotification() throws Exception {
+  public void newNotification() throws Exception {
 
     // Has to be delayed
     DelayedNotificationData dndTest = buildValidDelayedNotificationData();
-    assertNewNotification(dndTest, 0);
+    assertNewNotificationIsSent(dndTest, 0);
 
     // Has to be sent because is flagged to be sent immediately
     dndTest = buildValidDelayedNotificationData();
     dndTest.setSendImmediately(true);
-    assertNewNotification(dndTest, 1);
+    assertNewNotificationIsSent(dndTest, 1);
 
     // Has to be sent because of a bad user id
     dndTest = buildValidDelayedNotificationData();
     dndTest.setUserId((Integer) null);
-    assertNewNotification(dndTest, 1);
+    assertNewNotificationIsSent(dndTest, 1);
 
     // Has to be sent because of a bad from user id
     dndTest = buildValidDelayedNotificationData();
     dndTest.setFromUserId(null);
-    assertNewNotification(dndTest, 1);
+    assertNewNotificationIsSent(dndTest, 1);
 
     // Has to be sent because of a bad channel
     dndTest = buildValidDelayedNotificationData();
     final List<NotifChannel> channels = new ArrayList<>(Arrays.asList(NotifChannel.values()));
     channels.remove(NotifChannel.SMTP);
-    channels.add(null); //=> I'm sorry but it is a bug! How we can know to send a message if we don't know the channel through which it can be sent!
+    channels.add(null); //=> I'm sorry but it is a bug! How we can know to send a message if we
+    // don't know the channel through which it can be sent!
     for (final NotifChannel channel : channels) {
       dndTest.setChannel(channel);
-      assertNewNotification(dndTest, 1);
+      assertNewNotificationIsSent(dndTest, 1);
     }
 
     // Has to be sent because of a bad action
     dndTest = buildValidDelayedNotificationData();
     dndTest.setAction(null);
-    assertNewNotification(dndTest, 1);
+    assertNewNotificationIsSent(dndTest, 1);
 
     // Has to be sent because of a bad priority
     dndTest = buildValidDelayedNotificationData();
-    for (final int priority : new int[]{NotificationParameters.PRIORITY_ERROR, NotificationParameters.PRIORITY_URGENT,
+    for (final int priority : new int[]{NotificationParameters.PRIORITY_ERROR,
+        NotificationParameters.PRIORITY_URGENT,
         -1, 3, 7, 9}) {
       dndTest.getNotificationParameters().setMessagePriority(priority);
-      assertNewNotification(dndTest, 1);
+      assertNewNotificationIsSent(dndTest, 1);
     }
 
     // Has to be sent because of a bad frequency
     dndTest = buildValidDelayedNotificationData();
     for (final int userId : new int[]{10, -100}) {
       dndTest.setUserId(userId);
-      assertNewNotification(dndTest, 1);
+      assertNewNotificationIsSent(dndTest, 1);
     }
 
     // Has to be sent because of a bad language
     dndTest = buildValidDelayedNotificationData();
     for (final String language : new String[]{null, "", "       "}) {
       dndTest.setLanguage(language);
-      assertNewNotification(dndTest, 1);
+      assertNewNotificationIsSent(dndTest, 1);
     }
 
     // Has to be sent because of a bad resource id
     dndTest = buildValidDelayedNotificationData();
     for (final String resourceId : new String[]{null, "", "       "}) {
       dndTest.getResource().setResourceId(resourceId);
-      assertNewNotification(dndTest, 1);
+      assertNewNotificationIsSent(dndTest, 1);
     }
     dndTest.getResource().setResourceId((Integer) null);
-    assertNewNotification(dndTest, 1);
+    assertNewNotificationIsSent(dndTest, 1);
 
     // Has to be sent because of a bad resource type
     dndTest = buildValidDelayedNotificationData();
     for (final String resourceType : new String[]{null, "", "       "}) {
       dndTest.getResource().setResourceType(resourceType);
-      assertNewNotification(dndTest, 1);
+      assertNewNotificationIsSent(dndTest, 1);
     }
 
     // Has to be sent because of a bad resource name
     dndTest = buildValidDelayedNotificationData();
     for (final String resourceName : new String[]{null, "", "       "}) {
       dndTest.getResource().setResourceName(resourceName);
-      assertNewNotification(dndTest, 1);
+      assertNewNotificationIsSent(dndTest, 1);
     }
 
     // Has to be sent because of a bad resource location
     dndTest = buildValidDelayedNotificationData();
     for (final String resourceLocation : new String[]{null, "", "       "}) {
       dndTest.getResource().setResourceLocation(resourceLocation);
-      assertNewNotification(dndTest, 1);
+      assertNewNotificationIsSent(dndTest, 1);
     }
 
     // Has to be sent because of a bad resource url
     dndTest = buildValidDelayedNotificationData();
     for (final String resourceUrl : new String[]{null, "", "       "}) {
       dndTest.getResource().setResourceUrl(resourceUrl);
-      assertNewNotification(dndTest, 1);
+      assertNewNotificationIsSent(dndTest, 1);
     }
 
     // Has to be sent because of a bad resource component instance id
     dndTest = buildValidDelayedNotificationData();
     for (final String componentInstanceId : new String[]{null, "", "       "}) {
       dndTest.getResource().setComponentInstanceId(componentInstanceId);
-      assertNewNotification(dndTest, 1);
+      assertNewNotificationIsSent(dndTest, 1);
     }
   }
 
-  private DelayedNotificationDelegateStub assertNewNotification(
+  private void assertNewNotificationIsSent(
       final DelayedNotificationData delayedNotificationDataTest, final int nbExpectedResults)
       throws Exception {
     final DelayedNotificationDelegateStub stub = new DelayedNotificationDelegateStub();
     stub.performNewNotificationSending(delayedNotificationDataTest);
     assertThat(stub.sendedList.size(), is(nbExpectedResults));
-    return stub;
   }
 
   private DelayedNotificationData buildValidDelayedNotificationData() {
@@ -225,63 +219,61 @@ public class DelayedNotificationDelegateIT {
 
     // Resource data
     dndTest.setResource(
-        buildNotificationResourceData(RESOURCE_DATA_ID_1, RESOURCE_DATA_TYPE, RESOURCE_DATA_NAME_1,
-            RESOURCE_DATA_DESCRIPTION_1, RESOURCE_DATA_LOCATION_1, RESOURCE_DATA_URL_1));
+        buildNotificationResourceData(
+        ));
     return dndTest;
   }
 
-  private static NotificationResourceData buildNotificationResourceData(final String resourceId,
-      final String resourceType, final String resourceName, final String resourceDescription,
-      final String resourceLocation, final String resourceUrl) {
+  private static NotificationResourceData buildNotificationResourceData() {
     final NotificationResourceData data = new NotificationResourceData();
-    data.setResourceId(resourceId);
-    data.setResourceType(resourceType);
-    data.setResourceName(resourceName);
-    data.setResourceDescription(resourceDescription);
-    data.setResourceLocation(resourceLocation);
-    data.setResourceUrl(resourceUrl);
+    data.setResourceId(DelayedNotificationDelegateIT.RESOURCE_DATA_ID_1);
+    data.setResourceType(DelayedNotificationDelegateIT.RESOURCE_DATA_TYPE);
+    data.setResourceName(DelayedNotificationDelegateIT.RESOURCE_DATA_NAME_1);
+    data.setResourceDescription(DelayedNotificationDelegateIT.RESOURCE_DATA_DESCRIPTION_1);
+    data.setResourceLocation(DelayedNotificationDelegateIT.RESOURCE_DATA_LOCATION_1);
+    data.setResourceUrl(DelayedNotificationDelegateIT.RESOURCE_DATA_URL_1);
     data.setComponentInstanceId("aComponentInstanceId");
     return data;
   }
 
   @Test
-  public void testDelayedNotifications_1() throws Exception {
-    // Forcings
-    assertDelayedNotifications(1, 53);
-    assertDelayedNotifications(1, 55);
+  public void delayedNotifications_1() throws Exception {
+    // Forcing
+    assertDelayedNotificationsAreForciblySent(1, 53);
+    assertDelayedNotificationsAreForciblySent(1, 55);
   }
 
   @Test
-  public void testDelayedNotifications_2() throws Exception {
-    // Forcings
-    assertDelayedNotifications(9, null);
-    assertDelayedNotifications(0, 53);
-    assertDelayedNotifications(0, 55);
+  public void delayedNotifications_2() throws Exception {
+    // Forcing
+    assertDelayedNotificationsAreForciblySent(9, null);
+    assertDelayedNotificationsAreForciblySent(0, 53);
+    assertDelayedNotificationsAreForciblySent(0, 55);
   }
 
   @Test
-  public void testDelayedNotifications_3() throws Exception {
+  public void delayedNotifications_3() throws Exception {
     // Weekly
-    assertDelayedNotifications(java.sql.Timestamp.valueOf("2012-10-01 12:45:23.125"),
+    assertDelayedNotificationsAreSent(java.sql.Timestamp.valueOf("2012-10-01 12:45:23.125"),
         new int[]{51, 53, 54}, "fr");
     // Checks
-    assertDelayedNotifications(0, 53);
-    assertDelayedNotifications(1, 55);
+    assertDelayedNotificationsAreForciblySent(0, 53);
+    assertDelayedNotificationsAreForciblySent(1, 55);
   }
 
   @Test
-  public void testDelayedNotifications_3Bis() throws Exception {
-    assertDelayedNotifications(java.sql.Timestamp.valueOf("2012-10-01 12:45:23.125"),
+  public void delayedNotifications_3Bis() throws Exception {
+    assertDelayedNotificationsAreSent(java.sql.Timestamp.valueOf("2012-10-01 12:45:23.125"),
         new int[]{51, 53, 54}, "en");
   }
 
   @Test
-  public void testDelayedNotifications_3Ter() throws Exception {
-    assertDelayedNotifications(java.sql.Timestamp.valueOf("2012-10-01 12:45:23.125"),
+  public void delayedNotifications_3Ter() throws Exception {
+    assertDelayedNotificationsAreSent(java.sql.Timestamp.valueOf("2012-10-01 12:45:23.125"),
         new int[]{51, 53, 54}, "de");
   }
 
-  private DelayedNotificationDelegateStub assertDelayedNotifications(final int nbExpectedSendings,
+  private void assertDelayedNotificationsAreForciblySent(final int expectedSendingNb,
       final Integer userId) throws Exception {
     final DelayedNotificationDelegateStub stub = new DelayedNotificationDelegateStub();
     if (userId != null) {
@@ -290,13 +282,11 @@ public class DelayedNotificationDelegateIT {
     } else {
       stub.forceDelayedNotificationsSending();
     }
-    assertThat(stub.sendedList.size(), is(nbExpectedSendings));
-    return stub;
+    assertThat(stub.sendedList.size(), is(expectedSendingNb));
   }
 
-  private DelayedNotificationDelegateStub assertDelayedNotifications(final Date date,
-      final int[] userIds, final String language) throws Exception {
-
+  private void assertDelayedNotificationsAreSent(final Date date, final int[] userIds,
+      final String language) throws Exception {
     for (final Integer userId : userIds) {
       final Map<NotifChannel, List<DelayedNotificationData>> dndMap =
           DelayedNotificationProvider.getDelayedNotification().
@@ -318,25 +308,27 @@ public class DelayedNotificationDelegateIT {
           .getResourceAsStream(
               "org/silverpeas/core/notification/user/delayed/result-synthese-" + userIds[i] +
                   "-" + language + ".txt")) {
-        String expectedNotif = IOUtils.toString(expected, Charsets.UTF_8).replaceAll("[\r\n\t]", "");
+        assertThat(expected, notNullValue());
+        String expectedNotif = IOUtils.toString(expected, Charsets.UTF_8).replaceAll("[\r\n\t]",
+            "");
         String actualNotif = stub.sendedList.get(i).getMessage().replaceAll("[\r\n\t]", "");
         assertThat(actualNotif, is(expectedNotif));
       }
     }
-    return stub;
   }
 
   private Set<NotifChannel> getAimedChannelsBase() {
-    return new HashSet<>(Arrays.asList(new NotifChannel[]{NotifChannel.SMTP}));
+    return new HashSet<>(List.of(NotifChannel.SMTP));
   }
 
   /**
    * Stub
+   *
    * @author Yohann Chastagnier
    */
-  private class DelayedNotificationDelegateStub extends DelayedNotificationDelegate {
+  private static class DelayedNotificationDelegateStub extends DelayedNotificationDelegate {
 
-    // Récupération des envoyés
+    // Fetching of the notifications that were sent
     final protected List<NotificationData> sendedList = new ArrayList<>();
 
     /**
@@ -359,8 +351,7 @@ public class DelayedNotificationDelegateIT {
     }
 
     @Override
-    protected void sendNotification(final NotificationData notificationData)
-        throws NotificationServerException {
+    protected void sendNotification(final NotificationData notificationData) {
       sendedList.add(notificationData);
     }
   }
